<resources>
    <string name="app_name">Movies</string>
    <string name="movie_title">movie_title</string>
    <string name="movie_over_view">movie overview</string>
    <string name="release_date">release_date</string>
    <string name="movie_rating">movie_rating</string>
    <string name="top_rated">Top Rated</string>
    <string name="popular">Popular</string>
    <string name="movie_details">Movie Details</string>
    <string name="favorite">Favorite</string>
    <string name="traillers">Traillers</string>
    <string name="reviews">Reviews</string>
    <string name="author_label">Author: </string>
</resources>
